trying to make sure quote block doesn't wrap its text on mobile

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ section h3 {
     font-family: 'Dancing Script', cursive;
     font-size: 2rem;
     text-transform: capitalize;
+    white-space: nowrap;
 }
 
 .footerP {
